# LoongEnv_V1

./: .gitignore  package-lock.json  package.json
v1/: .gitignore  3D_MODEL_DEBUGGING_SUMMARY.md  DEPLOYMENT_GUIDE.md  FLEXIBLE_JOINT_COMPENSATION_SUMMARY.md  PACKAGE_README.txt  PACKAGING_SUMMARY.md  PARAMETER_TUNING_COMPARISON_FEATURE.md  PROJECT_CLEANUP_SUMMARY.md  QUICK_START.md  README.md  TUNING_RESTART_FIX.md  UI_3D_ROBOT_IMPLEMENTATION_SUMMARY.md  UI_COLOR_ENHANCEMENT_SUMMARY.md  UI_DESIGN_SPECIFICATION.md  UI_FRONTEND_FIXES_SUMMARY.md  URDF_3D_MODEL_IMPROVEMENT_SUMMARY.md  URDF_BASED_STL_MODEL_IMPROVEMENT_SUMMARY.md  VENV_SHARED_SETUP.md  create_deployment_package.bat  create_deployment_package.sh  pyproject.toml  pytest.ini  start_system.py  test_tuning_restart.py
v1/.kiro/specs/robot-motion-control/: design.md  tasks.md
v1/PerfOpt_temp/: README.md  create_perfopt.py  fix_perfopt.py  setup_perfopt.sh
v1/config/: settings.json
v1/docs/: README.md
v1/docs/fixes/: TUNING_NAN_FIX.md  TUNING_SENSITIVITY_FIX.md  TUNING_ZERO_IMPROVEMENT_FIX.md
v1/docs/implementation/: COMPREHENSIVE_TEST_SCENARIOS_SUMMARY.md  CONNECTION_REFUSED_FIX_SUMMARY.md  FONT_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PARAMETER_TUNING_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  STL_SCALE_FIX_SUMMARY.md  TEST_FIXES_SUMMARY.md  UI_UX_PRO_MAX_ENHANCEMENT_SUMMARY.md
v1/docs/reports/: FINAL_VERIFICATION_REPORT.md  TEST_STATUS_REPORT.md
v1/docs/ui/: FRONTEND_BACKEND_FEATURE_MAPPING.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  PENCIL_DESIGN_REQUIREMENTS.md  UI_IMPLEMENTATION_PLAN.md  UI_MOCKUP_DESCRIPTIONS.md  UI_使用说明.md
v1/examples/: README.md  parameter_tuning_demo.py  path_controller_demo.py
v1/models/: README.md  er15-1400.mjcf.xml
v1/reports/: performance_report.json
v1/result/: trajectory.json
v1/src/: README.md
v1/src/robot_motion_control/algorithms/: dynamics.py  parallel_dynamics.py  (+5 more)
v1/tests/: README.md  comprehensive_test_report.json  test_collision_detection.py  test_comprehensive_scenarios.py  test_extreme_conditions.py  test_gravity_friction_modeling.py  test_integration_basic.py  test_parameter_tuning.py  test_path_controller.py  test_pinocchio_integration.py  test_topp_algorithm.py
v1/tools/: README.md  export_pen_svg.py  start_backend_safe.sh  start_system.py
v1/tools/diagnostics/: diagnose_tuning_crash.py  diagnose_tuning_sensitivity.py  test_nan_handling.py  test_pinocchio_dynamics.py  test_tuning_fix.py
v1/tools/pencil/: README.md
v1/tuning_reports/: tuning_report_20260128_123726.json  tuning_report_20260128_123726.md  tuning_report_20260128_153032.md  tuning_report_20260128_153734.json  tuning_report_20260128_182618.json  tuning_report_20260128_182618.md  tuning_report_20260128_221227.json  tuning_report_20260128_221227.md  tuning_report_20260128_231235.json  tuning_report_20260128_231235.md  tuning_report_20260128_231417.json  tuning_report_20260128_231417.md  tuning_report_20260128_232233.json  tuning_report_20260128_232233.md  tuning_report_20260128_233640.json  tuning_report_20260128_233640.md  tuning_report_20260128_233801.json  tuning_report_20260128_233801.md  tuning_report_20260128_233838.json  tuning_report_20260128_233838.md  tuning_report_20260129_080551.json  tuning_report_20260129_080551.md
v1/ui/: README.md  backend_api.py  package-lock.json  pencil-welcome.pen  ui.pen  vite.config.ts
v1/ui/src/: App.tsx  main.tsx
(+150 files in other folders)
